test: add comprehensive tests for domain exception classes
Add test coverage for DomainErrorException and PriceNotFoundException
with 22 new tests covering all validation scenarios and reactive patterns.

Key changes:
- Add DomainErrorExceptionTest with 11 tests covering requireNonNull,
  require methods, and validation chain behavior
- Add PriceNotFoundExceptionTest with 11 tests covering exception
  creation with context, reactive error handling, and asError helper
- Fix ProductPriceTimeline validation to correctly use DomainErrorException
  require semantics (returns exception when predicate is FALSE)
- Update ProductPriceTimelineTest to expect RuntimeException instead of
  IllegalArgumentException for validation failures
- Refactor PriceService validation to defer repository calls properly,
  preventing NPE when null parameters are passed
- Add lenient mock setup in PriceServiceTest for validation test cases

Test results: All 148 tests passing with coverage requirements met.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>